# dlSubscanStakingRewardsHistory

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
csv_sample/: 1REAJ1k691g5Eqqg9gL7vvZCBG7FCCZ8zgQkZWd4va5ESih_CryptactCustom_0531.csv  1REAJ1k691g5Eqqg9gL7vvZCBG7FCCZ8zgQkZWd4va5ESih_CryptactCustom_300_20220605.csv  1REAJ1k691g5Eqqg9gL7vvZCBG7FCCZ8zgQkZWd4va5ESih_Reward&Slash_20220531.csv  1REAJ1k691g5Eqqg9gL7vvZCBG7FCCZ8zgQkZWd4va5ESih_Reward&Slash_300_20220605.csv
src/: config.ini  config.toml  cryptact.py  gui.py  main.py  subscan.py
tests/: test_cryptact.py
uml/classes_dlSubscanStakingRewardsHistory/: classes_dlSubscanStakingRewardsHistory.puml
uml/packages_dlSubscanStakingRewardsHistory/: packages_dlSubscanStakingRewardsHistory.puml
