[tool.poetry]
name = "dlsubscanstakingrewardshistory"
version = "0.1.0"
description = "GUI application to save Reward&Slash data as csv file using PySimpleGUI and Subscan API"
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.4"
pandas = "^1.5.1"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
