[tool.poetry]
name = "dlsubscanstakingrewardshistory"
version = "0.2.0"
description = "GUI application to save Reward&Slash data as csv file using PySimpleGUI and Subscan API"
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.4"
pandas = "^1.5.1"
requests = "^2.28.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^1.0.1"
types-requests = "^2.28.11.15"
types-toml = "^0.10.8.5"
pytest-cov = "^4.0.0"
flake8-pyproject = "^1.2.2"

[tool.black]
target-version = ['py310']

[tool.isort]

[tool.flake8]
ignore = ["E501","W503"]

[tool.mypy]
python_version = "3.10"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
